<resources>
    <string name="app_name">ReBook</string>
    <string name="app_tagline">Exchange books with your community</string>

    <!-- Auth -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_full_name">Full Name</string>
    <string name="btn_login">Log In</string>
    <string name="btn_register">Create Account</string>
    <string name="btn_logout">Log Out</string>
    <string name="link_go_to_register">Don\'t have an account? Sign up</string>
    <string name="link_go_to_login">Already have an account? Log in</string>

    <!-- Errors -->
    <string name="error_empty_email">Email is required</string>
    <string name="error_empty_password">Password is required</string>
    <string name="error_empty_name">Name is required</string>
    <string name="error_short_password">Password must be at least 6 characters</string>
    <string name="error_invalid_email">Enter a valid email address</string>
    <string name="error_generic">Something went wrong. Please try again.</string>

    <!-- Main -->
    <string name="nav_explore">Explore</string>
    <string name="nav_profile">Profile</string>
    <string name="welcome_message">Welcome to ReBook!</string>

    <!-- Profile -->
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_list_new_book">List New Book</string>
    <string name="label_my_listed_books">My Listed Books</string>
    <string name="empty_my_books">You haven\'t listed any books yet</string>
    <string name="status_available">Available</string>
    <string name="status_requested">Requested</string>
    <string name="status_lent">Lent</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_approve_request">Approve Request</string>
    <string name="dialog_approve_title">Approve Request</string>
    <string name="dialog_approve_message">Approve this request? The book will be marked as lent and unavailable to others.</string>
    <string name="status_approved">Approved ✓</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="dialog_delete_title">Delete Book</string>
    <string name="dialog_delete_message">Are you sure you want to delete this book?</string>

    <!-- Add/Edit Book -->
    <string name="title_add_book">Add Book</string>
    <string name="title_edit_book">Edit Book</string>
    <string name="hint_book_title">Title</string>
    <string name="hint_book_author">Author</string>
    <string name="hint_book_description">Description</string>
    <string name="label_add_photo">Add Photo</string>
    <string name="error_empty_title">Title is required</string>
    <string name="error_empty_author">Author is required</string>
    <string name="btn_search_open_library">Search Open Library</string>

    <!-- Messages -->
    <string name="messages_screen_title">Messages</string>
    <string name="messages_stub_body">Message thread will appear here.</string>
    <string name="hint_message">Write a message…</string>
    <string name="send_message">Send</string>
    <string name="empty_messages">No messages yet. Say hello!</string>
    <string name="error_messages_listen">Could not load messages.</string>
    <string name="back">Back</string>
    <string name="btn_send_message_to_owner">Send Message to Owner</string>
    <string name="btn_book_message_threads">Messages</string>
    <string name="chat_threads_title">Conversations</string>
    <string name="empty_chat_threads">No conversations yet. Buyers will appear here after they message you.</string>

    <!-- Explore -->
    <string name="title_all_books">All Books</string>
    <string name="title_books_available">Books Available</string>
    <string name="title_filter_books">Filter books</string>
    <string name="filter_all_books">All books</string>
    <string name="filter_available_only">Available only</string>

    <!-- Edit Profile -->
    <string name="title_edit_profile">Edit Profile</string>
    <string name="hint_display_name">Display Name</string>
    <string name="label_change_photo">Change Photo</string>
</resources>
